--- a/css/game.css
+++ b/css/game.css
@@ -1,8 +1,16 @@
 table.myCards {
 }
+
 .card {
    border: 1px solid black;
    padding: 10px;
    width: 25px;
+   height: 100px;
+}
+
+.player {
+   border: 1px solid black;
+   padding: 10px;
+   width: 100px;
    height: 100px;
 }
