--- a/css/game.css
+++ b/css/game.css
@@ -14,3 +14,8 @@ table.myCards {
    width: 100px;
    height: 100px;
 }
+
+.activePlayer {
+   border: 3px solid green;
+   background: lightgrey;
+}
