--- a/css/game.css
+++ b/css/game.css
@@ -1,9 +1,13 @@
 table.myCards {
 }
 
+.card-button {
+   width: 50px;
+   height: 120px;
+}
+
 .card {
    border: 1px solid black;
-   padding: 10px;
    width: 25px;
    height: 100px;
 }
